--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.spellcastingsystem/com.example.spellcastingsystem.HelloApplication
+                            <mainClass>com.example.spellcastingsystem/com.example.spellcastingsystem.WizardApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
